--- a/quiz.html
+++ b/quiz.html
@@ -18,7 +18,7 @@
         </header>
         <div class="container">
             <section class="quiz-section">
-                <div  class="timer">
+                <div  class="timer">Time Duration:
                     <h5 id="displayTime">00:00:00</h5></div>
                 <div class="quiz-box">
                 <h1>Online Quiz</h1>
@@ -47,7 +47,7 @@
                 </div>
              </div>  
              <div class="result-box">
-                <h2>Quiz Result</h2>
+                <h2>Quiz Result!</h2>
                 <div class="percentage-container">
                     <div class="circular-progress">
                         <span class="progress-value">0%</span>
@@ -94,7 +94,7 @@
         </div>
     </div>
 
-    <script src="questions.js"></script>
+   
     <script src="script.js"></script>
 </body>
 </html>
